# ScrapMate

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/source/: conf.py  index.rst  modules.rst  tutorial.rst
scrape_mate/: scraper.py  utils.py
tests/: test_scraper.py
