[tool.poetry]
name = "scrapemate"
version = "0.1.0"
description = "A lightweight Python package designed for quick and easy web scraping with features to fetch, parse, and extract web content."
authors = ["Taha EZ-ZOURY <ezzoury.taha@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/T-Ezzoury/ScrapMate" 
repository = "https://github.com/T-Ezzoury/ScrapMate"
documentation = "https://github.com/T-Ezzoury/ScrapMate"
keywords = ["web scraping", "html parsing", "python", "beautifulsoup", "requests"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Retrieval"
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
pylint = "^3.3.1"
mypy = "^1.13.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"